// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/Com Footer when footer copyright is set, footer copyright should be correct 1`] = `
<footer class="dp-footer">
  <div class="container">
    <div class="row">
      <!---->
    </div>
    <div class="row">
      <div class="col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-0 dp-footer__country">
        <!---->
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__copyright"><span class="dp-footer__copyright">© 2020 GoBear.</span></div>
      <div class="col-xs-12 col-lg-4 dp-footer__policy">
        <!---->
      </div>
    </div>
  </div>
</footer>
`;

exports[`modules/Com Footer when footer countries is set, footer countries should be correct 1`] = `
<footer class="dp-footer">
  <div class="container">
    <div class="row">
      <!---->
    </div>
    <div class="row">
      <div class="col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-0 dp-footer__country">
        <ul>
          <li>
            <a href="/hk"><span class="dp-icon dp-icon__country dp-icon__country--hk"></span></a>
          </li>
        </ul>
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__copyright">
        <!---->
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__policy">
        <!---->
      </div>
    </div>
  </div>
</footer>
`;

exports[`modules/Com Footer when footer is set, footer should be shown 1`] = `
<footer class="dp-footer">
  <div class="container">
    <div class="row">
      <div class="col-lg-2"><span class="col-sm-12 dp-footer__title">GoBear</span>
        <ul>
          <li class="col-sm-12">
            <a href="/sg/about-us" class="dp-link">About us</a>
          </li>
        </ul>
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__social"><span class="col-lg-12 dp-footer__title">Follow</span>
        <ul>
          <li>
            <a href="https://www.facebook.com/GoBearSG">
              <i aria-hidden="true" class="fa fa-facebook"></i>
            </a>
          </li>
          <li>
            <a href="https://twitter.com/xxxxxxsg">
              <i aria-hidden="true" class="fa fa-twitter"></i>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div class="row">
      <div class="col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-0 dp-footer__country">
        <ul>
          <li>
            <a href="/hk"><span class="dp-icon dp-icon__country dp-icon__country--hk"></span></a>
          </li>
        </ul>
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__copyright"><span class="dp-footer__copyright">© 2019 Woodpecker Asia Tech Pte. Ltd. All rights reserved.</span></div>
      <div class="col-xs-12 col-lg-4 dp-footer__policy">
        <ul>
          <li>
            <a href="/sg/terms-and-conditions" class="dp-link">Terms</a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</footer>
`;

exports[`modules/Com Footer when footer links are set, footer links should be correct 1`] = `
<footer class="dp-footer">
  <div class="container">
    <div class="row">
      <div class="col-lg-2"><span class="col-sm-12 dp-footer__title">GoBear</span>
        <ul>
          <li class="col-sm-12">
            <a href="/sg/about-us" class="dp-link">About us</a>
          </li>
        </ul>
      </div>
      <!---->
    </div>
    <div class="row">
      <div class="col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-0 dp-footer__country">
        <!---->
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__copyright">
        <!---->
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__policy">
        <!---->
      </div>
    </div>
  </div>
</footer>
`;

exports[`modules/Com Footer when footer policyLinks is set, footer policyLinks should be correct 1`] = `
<footer class="dp-footer">
  <div class="container">
    <div class="row">
      <!---->
    </div>
    <div class="row">
      <div class="col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-0 dp-footer__country">
        <!---->
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__copyright">
        <!---->
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__policy">
        <ul>
          <li>
            <a href="/sg/terms-and-conditions" class="dp-link">Terms</a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</footer>
`;

exports[`modules/Com Footer when footer social media is set, footer social media should be correct 1`] = `
<footer class="dp-footer">
  <div class="container">
    <div class="row">
      <div class="col-xs-12 col-lg-4 dp-footer__social"><span class="col-lg-12 dp-footer__title">Follow</span>
        <ul>
          <li>
            <a href="https://www.facebook.com/GoBearSG">
              <i aria-hidden="true" class="fa fa-facebook"></i>
            </a>
          </li>
          <li>
            <a href="https://twitter.com/xxxxxxsg">
              <i aria-hidden="true" class="fa fa-twitter"></i>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div class="row">
      <div class="col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-0 dp-footer__country">
        <!---->
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__copyright">
        <!---->
      </div>
      <div class="col-xs-12 col-lg-4 dp-footer__policy">
        <!---->
      </div>
    </div>
  </div>
</footer>
`;
